# Celeste

./: .replit  ApexPlatformerPRD .docx  Apex_Platformer_PRD_Updated.docx  Apex_Platformer_PRD_Updated_v2.docx  package.json  pnpm-lock.yaml  replit.md  server.js
.agents/memory/: MEMORY.md  active-server.md
artifacts/api-server/: package.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts  game-data.ts  index.ts  online-race.ts
game-app/: Program.cs  appsettings.json
game-app-blazor/: App.razor  Program.cs  README.md  _Imports.razor  game-app-blazor.csproj
game-app-blazor/CelesteCode/: GameEntities.cs  LevelSystem.cs
game-app-blazor/Pages/: Index.razor
game-app-blazor/Stubs/: CelesteEntities.cs  CelesteSystems.cs  Monocle.cs  Xna.cs
game-app-blazor/wwwroot/: index.html
game-app/CelesteCode/: Player.cs
game-app/Data/: ai-model.json  ai-recordings.json  leaderboard.json  players.json
game-app/Native/: CMakeLists.txt  build.sh
game-app/Native/Engine/Ai/: ai_learning.hpp
game-app/Native/Interop/: JsBridge.cpp  JsBridge.h
game-app/accounts/: profile.html  profile.js
game-app/ai/: ai_learning.hpp
game-app/profile/: profile.html  profile.js
game-app/webSite/: account.json  achievements.html  achievements.js  admin.html  ai-neural.js  ai-neural.wasm.js  ai-neural.wasm.wasm  ai-wasm-bridge.js  app.js  checkpoints.html  editor.html  editor.js  entities.js  game.css  game.html  game.js  home.html  home.js  index.html  leaderboard.html  leaderboard.js  main.js  online-race.js  platform-data.js  player.js  profile.html  register.html  register.js  stats.html  stats.js
trainer/: CMakeLists.txt  main.cpp  map_gen.hpp  physics.hpp  train.sh
translation-layer/: Bridge.cs  bridge.cpp  bridge.h  js-bridge.js  shared-contract.json  ts-bridge.ts
webSite/: index.html
(+2 files in other folders)
